update button slider...

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </svg>
         </div>
         <div class="drop_down_button"></div>
+        <div class="button_div"></div>
         <div class="row_align-items-center">
             <div class="col-sm-2"><p id="value-time"></p></div>
             <div class="col-sm"><div id="slider-time"></div></div>
