--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- partial:index.partial.html -->
         <div id="map">
-            <svg width="1000" height="800" style="border: 2px ">
+            <svg width="100%" height="800">
                 <g class="counties"></g>
                 <path class="county-borders"></path>
                 <g class="mountain"></g>
