add simple zoom

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div id="map">
         <svg width="100%" height="800">
             <g class="counties"></g>
-            <path class="county-borders"></path>
+            <g class="areas"></g>
+            <path class="area-borders"></path>
+            <path class="county-borders"></path>     
             <g class="mountain"></g>
         </svg>
     </div>
