--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <path class="area-borders"></path>
             <path class="county-borders"></path>     
             <g class="mountain"></g>
+            <g class="area-mountain"></g>
         </svg>
     </div>
     <div class="drop_down_button"></div>
