--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
             <g class="counties"></g>
             <g class="areas"></g>
             <path class="area-borders"></path>
-            <path class="county-borders"></path>     
+            <path class="county-borders"></path>
             <g class="mountain"></g>
             <g class="area-mountain"></g>
         </svg>
+    </div>
+    <div id='info'>
+        <h1>106年~109年全台租屋案件大調查</h1>
+        <div id='content' style="width: 325px;">
+            <h3>圖解</h3>
+            <p>1.台灣六都（台北市、新北市、桃園市、台中市、台南市及高雄市）的租屋案件成交量較多，可見租屋市場發展較蓬勃，且租屋需求多集中於六都。<br>
+                2.民間租屋網上呈現的交易數量，遠多於實價登錄網上的案件，可見租屋市場的黑市情形嚴重。<br>
+                資料來源／內政部不動產交易平台、591租屋網資料（僅統計住宅種類）<br>
+                圖表製作／陳岳紘、 謝宇星、陳冠盛
+        </div>
+        </p>
+    </div>
+
     </div>
     <div class="drop_down_button"></div>
     <div class="button_div"></div>
