--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- partial:index.partial.html -->
     <div id="map">
-        <svg width="100%" height="800">
+        <svg width="980px" height="800">
             <g class="counties"></g>
             <g class="areas"></g>
             <path class="area-borders"></path>
@@ -21,13 +21,13 @@
     </div>
     <div id='info'>
         <h1>105年~108年全台租屋案件大調查</h1>
-        <div id='content' style="width: 325px;">
+        <div id='content' style="width: 394px;">
             <h3>圖解</h3>
             <p>1.台灣六都（台北市、新北市、桃園市、台中市、台南市及高雄市）的租屋案件成交量較多，可見租屋市場發展較蓬勃，且租屋需求多集中於六都。</p>
             <p>2.民間租屋網上呈現的交易數量，遠多於實價登錄網上的案件，可見租屋黑市情形嚴重。</p>
             <p style='font-size: 12px;margin-top: 28px;'>
                 資料來源／內政部不動產交易平台、591租屋網資料<br>
-                圖表製作／陳岳紘、 謝宇星、陳冠盛
+                圖表製作／陳岳紘、陳冠盛、謝宇星
             </p>
         </div>
         </p>
@@ -38,7 +38,8 @@
     <div class="button_div"></div>
     <div class="row_align-items-center">
         <div class="col-sm-2">
-            <h1 id="value-time" style="margin-left: 18px;"></h1>
+            <h1 id="value-time" style="margin-left: 18px;display: inline;"></h1>
+            <h2 id="value-time-type" style="margin-left: 18px; display: inline;"></h2>
         </div>
         <div class="col-sm">
             <div id="slider-time"></div>
