--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>105年~108年全台承租案件大調查</h1>
         <div id='content' style="width: 273px;">
             <h3>圖解</h3>
-            <p>1.台北市、新北市、桃園市、台中市、台南市及高雄市的租屋案件成交量較多，可見租屋需求多集中於六都。（點進六都看更多）</p>
+            <p>1.台北市、新北市、桃園市、台中市、台南市及高雄市的租屋案件成交量較多，可見租屋需求多集中於六都。<br>（點進六都看更多）</p>
             <p>2.民間租屋網上呈現的成交數量，遠多於實價登錄網上的案件，可見租屋黑市情形嚴重。</p>
             <p style='font-size: 12px;margin-top: 28px;'>
                 資料來源／內政部不動產交易平台、591租屋網資料<br>
